--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
     <label>Nombre <input type="text" name="name" /></label>   
   </p>
   <p>
-    <label>Your Email: <input type="email" name="email" /></label>
+    <label>Correo electronico: <input type="email" name="email" /></label>
   </p>
   <p>
-    <label>Your Role: <select name="role[]" multiple>
-      <option value="leader">Leader</option>
-      <option value="follower">Follower</option>
+    <label>Asunto <select name="role[]" multiple>
+      <option value="Negocios">Leader</option>
+      <option value="Quejas">Follower</option>
     </select></label>
   </p>
   <p>
-    <label>Message: <textarea name="message"></textarea></label>
+    <label>Mensaje <textarea name="message"></textarea></label>
   </p>
   <p>
-    <button type="submit">Send</button>
+    <button type="submit">Enviar</button>
   </p>
 </form>
