--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </p>
   <p>
     <label>Asunto <select name="role[]" multiple>
-      <option value="Negocios">Leader</option>
-      <option value="Quejas">Follower</option>
+      <option value="Leader">Negocios</option>
+      <option value="Follower">Sugerencias</option>
+      <option value="quejas">Quejas</option>
+      <option value="sugerencia">Productos</option>
     </select></label>
   </p>
   <p>
