--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <style >
   body {
-    background: #FC5C7D;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #6A82FB, #FC5C7D);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
-    height:650px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background:
+     	background:url(https://d500.epimg.net/cincodias/imagenes/2020/04/29/lifestyle/1588153073_453892_1588153314_sumario_normal.jpg);
+        background position: center;
+        background-attachment: fixed;
+        background-size: cover;
 }
 
 </style>
