--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <style >
   body {
-    background:
-     	background:url(https://d500.epimg.net/cincodias/imagenes/2020/04/29/lifestyle/1588153073_453892_1588153314_sumario_normal.jpg);
-        background position: center;
-        background-attachment: fixed;
-        background-size: cover;
+    body {
+    background: #FC5C7D;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #6A82FB, #FC5C7D);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background-image: radial-gradient(circle at 50% 7.89%, #8a2bb2 0, #7119a9 25%, #53009e 50%, #2d0093 75%, #00008a 100%);
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    height:650px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 }
 
 </style>
