--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@ text-decoration: none;
  <div class="wrapper">
   <h1>Contacto con el vendedor</h1>
   <p>
-    <label>Nombre <br><input type="text" name="name" /></label>   
+    <label>Nombre <br><input type="text" name="Nombre" /></label>   
   </p>
   <p>
     <label>Correo electronico: <br><input type="email" name="email" /></label>
   </p>
   <p>
     <label>Asunto <br><select name="rol[]" multiple>
-      <option value="Leader">Negocios</option>
-      <option value="Follower">Sugerencias</option>
-      <option value="quejas">Quejas</option>
-      <option value="sugerencia">Productos</option>
-       <option value="cuestiones">Preguntas</option>
-       <option value="cuestiones">Uso</option>
+      <option value="Negocios">Negocios</option>
+      <option value="Sugerencias">Sugerencias</option>
+      <option value="Quejas">Quejas</option>
+      <option value="Producto">Productos</option>
+       <option value="Preguntas">Preguntas</option>
+       <option value="Uso">Uso</option>
     </select></label>
   </p>
   <p>
